Cycles OptiX: Deleting a active OSL node causes issues #104157

Closed
opened 2023-01-26 19:49:43 +01:00 by Alaska · 7 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-26 00:06, hash: c1beaea80f
Worked: Not sure

Short description of error
When using OptiX Open Shading Language (OSL), and the user deletes a active OSL node while viewport rendering is active causes issues. The issues that occur differ between platforms.

On Windows, the viewport render stops working and needs to be restarted. On Linux a illegal address error message appears.

Exact steps for others to reproduce the error

  1. Open Blender.
  2. Change the render engine to Cycles.
  3. Change the rendering device to GPU Compute with OptiX as your rendering backend (Requires a OptiX compatible GPU)
  4. Enable Open Shading Language.
  5. Enter the rendered viewport, and in a material of a active object, add a OSL script and connect it to the material output.
  6. Delete the OSL script node and notice issues in the viewport render. On Windows the viewport render stops. On Linux an error is encountered.

Here is an example of the issue on Windows:
OptiX OSL deleting shader issue - Windows.mp4

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-26 00:06, hash: `c1beaea80f` Worked: Not sure **Short description of error** When using OptiX Open Shading Language (OSL), and the user deletes a active OSL node while viewport rendering is active causes issues. The issues that occur differ between platforms. On Windows, the viewport render stops working and needs to be restarted. On Linux a `illegal address` error message appears. **Exact steps for others to reproduce the error** 1. Open Blender. 2. Change the render engine to Cycles. 3. Change the rendering device to GPU Compute with OptiX as your rendering backend (Requires a OptiX compatible GPU) 4. Enable Open Shading Language. 5. Enter the rendered viewport, and in a material of a active object, add a OSL script and connect it to the material output. 6. Delete the OSL script node and notice issues in the viewport render. On Windows the viewport render stops. On Linux an error is encountered. Here is an example of the issue on Windows: [OptiX OSL deleting shader issue - Windows.mp4](https://archive.blender.org/developer/F14201070/OptiX_OSL_deleting_shader_issue_-_Windows.mp4)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @pmoursnv, @lichtwerk

Added subscribers: @pmoursnv, @lichtwerk
Member
CC @pmoursnv

This issue was referenced by 4635dd6aed

This issue was referenced by 4635dd6aed4c97ea234508e774db991926a7b3cf
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Patrick Mours self-assigned this 2023-01-27 16:15:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104157
No description provided.